# AMD-Hackathon-ACTII

./: .env.coolify.example  .env.example  .gitignore  CHATROOM.md  PLAN.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.superpowers/sdd/: task-3-report.md  task-4-report.md  task-5-report.md
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0f98fdabb0a7_baseline_schema.py  59dbbdaf196f_baseline_schema.py  a1b2c3d4e5f6_case_membership_overrides.py  d9f1a136d398_baseline_schema.py  e4a7b2c9d105_add_claim_ledger.py
backend/demo/synthetic-reconciliation/: README.md  expected-results.json  generate.py  test_generate.py
backend/demo/synthetic-reconciliation/source/: case-01-clean.json  case-02-delivery-dispute.json  case-03-invalid-deductions.json
backend/demo/woolworths-barossa/: 01_purchase_order_4500912345.md  02_invoice_INV-20415.md  03_proof_of_delivery_ASN-0079912.md  04_promo_funding_agreement_PROMO-2026-Q2-0087.md  05_remittance_advice_RA-2026-06-30.md
backend/src/claims_recovery/: config.py  database.py  main.py  procrastinate_app.py  seed.py  tasks.py
backend/src/claims_recovery/agents/: agent1_ocr_extractor.py  agent4_discrepancy_aggregator.py  agent_definitions.py  normalizer_agent.py  tools.py
backend/src/claims_recovery/fireworks/: client.py  setup.py
backend/src/claims_recovery/models/: __init__.py  base.py  case_graph.py  discrepancy.py  document.py  invoice.py  pipeline_run.py  recovery_claim.py
backend/src/claims_recovery/routers/: cases.py  documents.py  ledger.py  runs.py
backend/src/claims_recovery/schemas/: api.py
backend/src/claims_recovery/services/: case_graph_service.py  classifier.py  document_service.py  ingestion.py  ledger.py  linker.py  llm.py  pipeline_service.py  reconciliation.py  triage.py  verifier.py  vision_ocr.py
backend/tests/: conftest.py  test_api.py  test_classifier.py  test_extraction.py  test_ingestion.py  test_ledger.py  test_linker.py  test_reconciliation.py  test_triage.py  test_verifier.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json
(+61 files in other folders)
