[project]
name = "claims-recovery"
version = "0.1.0"
description = "Invaritech Claims Recovery Agent — Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "procrastinate>=2.10.0",
    "psycopg[binary]>=3.1.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "pdfplumber>=0.11.0",
    "pypdfium2>=4.30.0",
    "pillow>=10.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "rapidfuzz>=3.0.0",
    "aiofiles>=24.0.0",
    "openai-agents>=0.0.7",
    "openai>=1.0.0",
    "greenlet>=3.0.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claims_recovery"]
